[gd_scene load_steps=7 format=3 uid="uid://wbnk02cam285"]

[ext_resource type="Script" uid="uid://c6ak2v2kdloi1" path="res://scripts/main.gd" id="1_4wyf3"]
[ext_resource type="PackedScene" uid="uid://ds2o47jeg1liv" path="res://scenes/player.tscn" id="2_k0juu"]
[ext_resource type="PackedScene" uid="uid://b0w38f8u0ap2l" path="res://scenes/environment.tscn" id="3_71j4m"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wfyh"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_sugp2"]
sky_material = SubResource("ProceduralSkyMaterial_0wfyh")

[sub_resource type="Environment" id="Environment_jyhfs"]
background_mode = 2
sky = SubResource("Sky_sugp2")
tonemap_mode = 2
glow_enabled = true

[node name="World" type="Node"]
script = ExtResource("1_4wyf3")
player_scene = ExtResource("2_k0juu")

[node name="Environment" parent="." instance=ExtResource("3_71j4m")]
transform = Transform3D(0.9990752, 0, 0, 0, 0.9990752, 0, 0, 0, 0.9990752, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyhfs")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://ds2o47jeg1liv")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="main_menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 429.0
offset_top = 244.0
offset_right = -429.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/main_menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/main_menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="host_button" type="Button" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="join_button" type="Button" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Join"

[node name="id_prompt" type="LineEdit" parent="CanvasLayer/main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Lobby ID"
alignment = 1

[connection signal="pressed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/join_button" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="CanvasLayer/main_menu/MarginContainer/VBoxContainer/id_prompt" to="." method="_on_id_prompt_text_changed"]
